<resources>
    <string name="app_name">SilapMataCrew</string>
    <string name="title_activity_maps">SM Crew</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="blogin">LOGIN</string>
    <string name="zTitle">SILAP MATA</string>
    <string name="zNetOff">Offline</string>
    <string name="zNetOn">Online</string>
    <string name="zGPS">GPS Belum Aktif</string>
    <string name="zError">Kesalahan Sistem</string>
    <string name="zBack">Tekan sekali lagi untuk keluar !</string>
    <string name="zPermission">Perizinan Gagal</string>
    <string name="zJenis">Jenis Pelanggaran</string>
    <string name="zAlt">Alamat</string>
    <string name="zKet">Keterangan</string>
    <string name="zTgl">Tanggal</string>
    <string name="zWkt">Waktu</string>
    <string name="zStt">Status</string>
    <string name="z1">:</string>
    <string name="zSOn">ONLINE  </string>
    <string name="zSOff">OFFLINE  </string>
    <string name="zNull">Data tidak Ditemukan</string>
    <string name="zAdmin">Admin</string>
    <string name="zPetugas">Petugas</string>
    <string name="zRute">Rute</string>
    <string name="zDetail">Detail</string>
    <string name="zTVer">Verifikasi</string>
    <string name="zMVer">Silakan pilih salah satu untuk memverifikasi laporan ini</string>
    <string name="zBVer">Benar</string>
    <string name="zSVer">Salah</string>
    <string name="zSSVer">Sudah Verifikasi</string>
    <string name="zLokasi">Info Lokasi</string>
    <string name="zLap1">Laporan Baru</string>
    <string name="zLap2">Laporan Valid</string>
    <string name="zLap3">Laporan Tidak Valid</string>
    <string name="zJln1">Jl. Hang Tuah</string>
    <string name="zJln2">Jl. Soekarno - Hatta</string>
    <string name="zGo">GO</string>
    <string name="zTitle1">Silap Mata</string>
    <string name="zIKoneksi">Info Koneksi</string>
    <string name="zMKoneksi">Koneksi internet bermasalah, silakan periksa koneksi internet anda dan coba lagi</string>
    <string name="zOK">OK</string>
</resources>
