<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="ContentDescription"
        android:orientation="vertical"
        android:background="@color/colorGrey1"
        android:layout_width="match_parent"
        android:layout_height="650dp">
    <FrameLayout
            android:id="@+id/vFmL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cClo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:elevation="1dp"
                android:src="@drawable/close"
                app:civ_border_width="3dp"
                app:civ_circle_background_color="@color/colorWhite"
                app:civ_border_color="@color/colorWhite"/>
        <ImageView
                android:id="@+id/vIme"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"/>
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="@dimen/imgtop"
            android:layout_alignEnd="@+id/vFmL"
            android:src="@drawable/ic_map" />

    <android.support.v7.widget.CardView
            android:id="@+id/cc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_below="@+id/vFmL">
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">
            <RelativeLayout
                    android:id="@+id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="@dimen/imgtop"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/zJenis"/>
                <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/t1"
                        android:layout_marginEnd="@dimen/imgtop"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/z1"/>
                <TextView
                        android:id="@+id/tJen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/t2"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/back"
                        android:padding="3dp"
                        android:textStyle="normal"
                        android:textSize="14sp"
                        android:text="@string/zJenis"/>
                <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tJen"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/zAlt"/>
                <TextView
                        android:id="@+id/t4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tJen"
                        android:layout_toEndOf="@+id/t1"
                        android:layout_marginEnd="@dimen/imgtop"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/z1"/>
                <TextView
                        android:id="@+id/tAla"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tJen"
                        android:layout_toEndOf="@+id/t4"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/back"
                        android:padding="3dp"
                        android:textStyle="normal"
                        android:textSize="14sp"
                        android:text="@string/zAlt"/>
                <TextView
                        android:id="@+id/t5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tAla"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/zTgl"/>
                <TextView
                        android:id="@+id/t6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tAla"
                        android:layout_toEndOf="@+id/t1"
                        android:layout_marginEnd="@dimen/imgtop"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/z1"/>
                <TextView
                        android:id="@+id/tTgl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tAla"
                        android:layout_toEndOf="@+id/t6"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/back"
                        android:padding="3dp"
                        android:textStyle="normal"
                        android:textSize="14sp"
                        android:text="@string/zTgl"/>
                <TextView
                        android:id="@+id/t7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tTgl"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/zWkt"/>
                <TextView
                        android:id="@+id/t8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tTgl"
                        android:layout_toEndOf="@+id/t1"
                        android:layout_marginEnd="@dimen/imgtop"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/z1"/>
                <TextView
                        android:id="@+id/tWkt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tTgl"
                        android:layout_toEndOf="@+id/t8"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/back"
                        android:padding="3dp"
                        android:textStyle="normal"
                        android:textSize="14sp"
                        android:text="@string/zWkt"/>
                <TextView
                        android:id="@+id/t9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tWkt"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/zStt"/>
                <TextView
                        android:id="@+id/t10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tWkt"
                        android:layout_toEndOf="@+id/t1"
                        android:layout_marginEnd="@dimen/imgtop"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/z1"/>
                <TextView
                        android:id="@+id/tSat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tWkt"
                        android:layout_toEndOf="@+id/t10"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/back"
                        android:padding="3dp"
                        android:textStyle="normal"
                        android:textSize="14sp"
                        android:text="@string/zStt"/>
                <TextView
                        android:id="@+id/t11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tSat"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/zKet"/>
                <TextView
                        android:id="@+id/t12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tSat"
                        android:layout_toEndOf="@+id/t1"
                        android:layout_marginEnd="@dimen/imgtop"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/z1"/>
                <TextView
                        android:id="@+id/tKet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tSat"
                        android:layout_toEndOf="@+id/t12"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/back"
                        android:padding="3dp"
                        android:textStyle="normal"
                        android:textSize="14sp"
                        android:text="@string/zKet"/>
            </RelativeLayout>
            <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/l1"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorElectro"/>
            <TextView
                    android:id="@+id/bTre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ripple_main1"
                    android:padding="8dp"
                    android:text="Verifikasi"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/imgtop"
                    android:layout_below="@id/line"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>